# Thesis-Avrdan

./: OpenGLTest.sln  PCLGreedyTriangulation.sln
OpenGLTemplate/: CMakeLists.txt  TriangleFragmentShader.frag  TriangleVertexShader.vert  main.cpp
OpenGLTemplate-build/: 9vixO.dds  9vixO2.dds  9vixO_pow2.dds  9vixO_pow2_2.dds  CMakeCache.txt  Makefile  OpenGLTemplate  OpenGLTemplate.cbp  cmake_install.cmake  uvmap.dds  uvmap2.dds
OpenGLTest/: ASSIMP.props  FreeImage.props  FreeType.props  GLEW.props  GLEW110-32bit.props  GLFW3.props  GLFW3_32bit.props  GLFWTest.cpp  GLM.props  GeometryShaderScene.cpp  GeometryShaderScene.h  HPMCScene.cpp  HPMCScene.h  MarchingCubes.cpp  MarchingCubes.h  MarchingCubesScene.cpp  MarchingCubesScene.h  OpenGLTest.vcxproj  OpenGLTest.vcxproj.filters  PCL32_Debug.props  PCLGreedyReconstruction.cpp  PCLGreedyReconstruction.h  PCLReconstructionScene.cpp  PCLReconstructionScene.h  PCSDK_Debug.props  PTMTestScene.cpp  PTMTestScene.h  PointCloudPCLScene.cpp  PointCloudPCLScene.h  PointCloudPTMScene.cpp  PointCloudPTMScene.h  PointCloudScene.cpp  PointCloudScene.h  RawDepthPipeline.cpp  RawDepthPipeline.h  assimpScene.cpp  assimpScene.h  frameBuffersScene.cpp  frameBuffersScene.h  heightMapScene.cpp  (+17 more)
PCLGreedyTriangulation/: PCLGreedyTriangulation.vcxproj  main.cpp
ProjectiveTextureMapping/: CMakeLists.txt  main.cpp  mesh.cpp  mesh.h  texture.cpp  texture.h
ProjectiveTextureMapping-build/: CMakeCache.txt  Makefile  ProjectiveTextureMapping  (+3 more)
ProjectiveTextureMapping/common/: controls.cpp  loadShader.cpp  objloader.cpp  textureLoader.cpp
(+87 files in other folders)
